--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/jetstream": "^2.13",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveles/spanish": "^1.5",
         "livewire/livewire": "^2.5"
     },
     "require-dev": {
